fix intro section flex wrap

--- a/mo-portfolio/styles/globals.css
+++ b/mo-portfolio/styles/globals.css
@@ -114,12 +114,85 @@ header {
 }
 
 .intro-section__desc>p {
-  font-size: 2rem;
+  font-size: 1.8rem;
+  padding-bottom: 10rem;
 }
 
+
+.intro-section__desc__tagline {
+  text-align: center;
+  padding-top: 2rem;
+}
+
+/* name bouncing animation */
 .name {
   font-weight: 600;
   font-size: 4rem;
+  transform: translate(-50%, -50%);
+  border-bottom: 8px solid #323012;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  width: 59%;
+}
+
+.name>span {
+  position: relative;
+  display: inline-block;
+  animation: animate 3s linear infinite;
+}
+
+.name>span:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.name>span:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.name>span:nth-child(3) {
+  animation-delay: 0.6s;
+}
+
+.name>span:nth-child(4) {
+  animation-delay: 0.8s;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0px);
+  }
+
+  10% {
+    transform: translateY(-30px);
+  }
+
+  15% {
+    transform: translateY(0px);
+  }
+
+  25% {
+    transform: translateY(-20px);
+  }
+
+  30% {
+    transform: translateY(0px);
+  }
+
+  40% {
+    transform: translateY(-10px);
+  }
+
+  45% {
+    transform: translateY(0px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 .intro-section__image {
@@ -147,13 +220,6 @@ header {
 
 .intro-section__social_item:hover {
   color: #323012 !important;
-}
-
-.intro-section__tagline {
-  padding: 2rem;
-  width: 30%;
-  font-family: 'Gotu', sans-serif;
-  font-size: 2rem;
 }
 
 /* About section */
@@ -723,12 +789,13 @@ textarea {
   }
 
   /* intro section */
-  .intro-section__tagline>p {
-    font-size: 1.5rem;
-  }
-
   .name {
     font-size: 3rem;
+  }
+
+  .intro-section__desc>p {
+    font-size: 1.5rem;
+    padding-bottom: 5rem;
   }
 
   /* about section */
